--- a/uti-0.0.1-SNAPSHOT/pom.xml
+++ b/uti-0.0.1-SNAPSHOT/pom.xml
@@ -93,5 +93,10 @@
 				<artifactId>variables</artifactId>
 				<version>3.4</version>
 		</dependency>
+		<dependency>
+      <groupId>jaxen</groupId>
+      <artifactId>jaxen</artifactId>
+      <version>1.1</version>
+    </dependency>
 	</dependencies>
 </project>
